{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 45,
  "lineage": "dcc04ad9-eb6c-b30c-4730-3447ea1a61c6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-master",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0947d2ba12ee1ff75",
            "arn": "arn:aws:ec2:us-east-1:342667981103:instance/i-0ab2cd614816350d9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ab2cd614816350d9",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins7",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-030a6fed98c57cd43",
            "private_dns": "ip-10-0-1-13.ec2.internal",
            "private_ip": "10.0.1.13",
            "public_dns": "ec2-34-238-155-76.compute-1.amazonaws.com",
            "public_ip": "34.238.155.76",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-086ff6921096f6992",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-009dfe82ada55687d",
            "tags": {
              "Name": "jenkins_master_tf"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-06cfac84c45a2971b"
            ]
          },
          "dependencies": [
            "aws_key_pair.master-key",
            "aws_main_route_table_association.set-master-default-rt-assoc",
            "aws_security_group.jenkins-sg",
            "aws_subnet.subnet_1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "jenkins-worker-oregon",
      "each": "list",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0528a5175983e7f28",
            "arn": "arn:aws:ec2:us-west-2:342667981103:instance/i-01dbba3e7950015e6",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01dbba3e7950015e6",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "jenkins7",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-002c42661332525da",
            "private_dns": "ip-192-168-1-83.us-west-2.compute.internal",
            "private_ip": "192.168.1.83",
            "public_dns": "ec2-54-201-164-232.us-west-2.compute.amazonaws.com",
            "public_ip": "54.201.164.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ec662f5fc46293e6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f5b940b517a5aade",
            "tags": {
              "Name": "jenkins_worker_tf_1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08f958fae73c7954a"
            ]
          },
          "dependencies": [
            "aws_instance.jenkins-master",
            "aws_key_pair.master-key",
            "aws_key_pair.worker-key",
            "aws_main_route_table_association.set-master-default-rt-assoc",
            "aws_main_route_table_association.set-worker-default-rt-assoc",
            "aws_security_group.jenkins-sg",
            "aws_security_group.jenkins-sg-oregon",
            "aws_subnet.subnet_1",
            "aws_subnet.subnet_1_oregon"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342667981103:internet-gateway/igw-0682dbf794e15c446",
            "id": "igw-0682dbf794e15c446",
            "owner_id": "342667981103",
            "vpc_id": "vpc-030c8963e1066db70"
          },
          "dependencies": [
            "aws_vpc.vpc_useast"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-oregon",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:342667981103:internet-gateway/igw-0ba5f4a408c764bab",
            "id": "igw-0ba5f4a408c764bab",
            "owner_id": "342667981103",
            "vpc_id": "vpc-0809a0a4817eb5916"
          },
          "dependencies": [
            "aws_vpc.vpc_uswest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set-master-default-rt-assoc",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094c282c9fd59dcbe",
            "original_route_table_id": "rtb-03faf0a12b31eb9a5",
            "route_table_id": "rtb-087769be4fb7ee87c",
            "vpc_id": "vpc-030c8963e1066db70"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.internet_route",
            "aws_vpc.vpc_useast",
            "aws_vpc.vpc_uswest",
            "aws_vpc_peering_connection.useast1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "set-worker-default-rt-assoc",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c023494be9c2ee9",
            "original_route_table_id": "rtb-0796e932b8bc5ab5b",
            "route_table_id": "rtb-0ff0b151efe1ddd1d",
            "vpc_id": "vpc-0809a0a4817eb5916"
          },
          "dependencies": [
            "aws_internet_gateway.igw-oregon",
            "aws_route_table.internet_route_oregon",
            "aws_vpc.vpc_useast",
            "aws_vpc.vpc_uswest",
            "aws_vpc_peering_connection.useast1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_route",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-087769be4fb7ee87c",
            "owner_id": "342667981103",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0682dbf794e15c446",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "192.168.1.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-024d975687d2429f3"
              }
            ],
            "tags": {
              "Name": "Master-Region-RT"
            },
            "vpc_id": "vpc-030c8963e1066db70"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_useast",
            "aws_vpc.vpc_uswest",
            "aws_vpc_peering_connection.useast1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet_route_oregon",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ff0b151efe1ddd1d",
            "owner_id": "342667981103",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba5f4a408c764bab",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "10.0.1.0/24",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": "pcx-024d975687d2429f3"
              }
            ],
            "tags": {
              "Name": "Worker-Region-RT"
            },
            "vpc_id": "vpc-0809a0a4817eb5916"
          },
          "dependencies": [
            "aws_internet_gateway.igw-oregon",
            "aws_vpc.vpc_useast",
            "aws_vpc.vpc_uswest",
            "aws_vpc_peering_connection.useast1-uswest-2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342667981103:security-group/sg-06cfac84c45a2971b",
            "description": "Allow TCP/8080 \u0026 TCP/22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06cfac84c45a2971b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 from our public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow anyone on port 8080",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "192.168.1.0/24"
                ],
                "description": "allow traffic from us-west-2",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "342667981103",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-030c8963e1066db70"
          },
          "dependencies": [
            "aws_vpc.vpc_useast"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins-sg-oregon",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:342667981103:security-group/sg-08f958fae73c7954a",
            "description": "Allow TCP/8080 \u0026 TCP/22",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08f958fae73c7954a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow 22 from our public IP",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24"
                ],
                "description": "Allow traffic from us-east-1",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "jenkins-sg-oregon",
            "name_prefix": "",
            "owner_id": "342667981103",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-0809a0a4817eb5916"
          },
          "dependencies": [
            "aws_vpc.vpc_uswest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342667981103:subnet/subnet-009dfe82ada55687d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-009dfe82ada55687d",
            "map_public_ip_on_launch": false,
            "owner_id": "342667981103",
            "vpc_id": "vpc-030c8963e1066db70"
          },
          "dependencies": [
            "aws_vpc.vpc_useast"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_1_oregon",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:342667981103:subnet/subnet-0f5b940b517a5aade",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "192.168.1.0/24",
            "id": "subnet-0f5b940b517a5aade",
            "map_public_ip_on_launch": false,
            "owner_id": "342667981103",
            "vpc_id": "vpc-0809a0a4817eb5916"
          },
          "dependencies": [
            "aws_vpc.vpc_uswest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_useast",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:342667981103:vpc/vpc-030c8963e1066db70",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b5198aae17b5a515",
            "default_route_table_id": "rtb-087769be4fb7ee87c",
            "default_security_group_id": "sg-0eaeb748e88f9f5a0",
            "dhcp_options_id": "dopt-0b2ab371",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-030c8963e1066db70",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-087769be4fb7ee87c",
            "owner_id": "342667981103",
            "tags": {
              "Name": "master-vpc-jenkins"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_uswest",
      "provider": "provider.aws.region-worker",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:342667981103:vpc/vpc-0809a0a4817eb5916",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-05a1559c2320b1770",
            "default_route_table_id": "rtb-0ff0b151efe1ddd1d",
            "default_security_group_id": "sg-048edb65864217daa",
            "dhcp_options_id": "dopt-21f68b59",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0809a0a4817eb5916",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ff0b151efe1ddd1d",
            "owner_id": "342667981103",
            "tags": {
              "Name": "worker-vpc-jenkins"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "useast1-uswest-2",
      "provider": "provider.aws.region-master",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "id": "pcx-024d975687d2429f3",
            "peer_owner_id": "342667981103",
            "peer_region": "us-west-2",
            "peer_vpc_id": "vpc-0809a0a4817eb5916",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-030c8963e1066db70"
          },
          "dependencies": [
            "aws_vpc.vpc_useast",
            "aws_vpc.vpc_uswest"
          ]
        }
      ]
    }
  ]
}